[gd_scene load_steps=2 format=3 uid="uid://inventory_slot_ui"]

[ext_resource type="Script" path="res://scripts/ui/inventory_slot_ui.gd" id="1"]

[node name="InventorySlotUI" type="PanelContainer"]
custom_minimum_size = Vector2(80, 80)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
visible = false
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="EmptyIndicator" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 0.25, 0.25, 0.3)

[node name="StackLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "x99"
